[gd_scene load_steps=36 format=2]

[ext_resource path="res://images/painel_elevador3 (1).png" type="Texture" id=1]
[ext_resource path="res://images/botao elevador 2 principal  (1).png" type="Texture" id=2]
[ext_resource path="res://Font/dogica.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/painelpreto.gd" type="Script" id=4]
[ext_resource path="res://Sounds/barulho de elevador.ogg" type="AudioStream" id=7]
[ext_resource path="res://images/botao elevador 2 (1).png" type="Texture" id=8]
[ext_resource path="res://images/botao elevador 3 (1).png" type="Texture" id=9]
[ext_resource path="res://images/botao elevador 0 (1).png" type="Texture" id=10]
[ext_resource path="res://images/botao elevador 1 (1).png" type="Texture" id=11]
[ext_resource path="res://images/botao elevador 3 principal (1).png" type="Texture" id=12]
[ext_resource path="res://images/botao elevador 4 (1).png" type="Texture" id=13]
[ext_resource path="res://images/botao elevador 1 principal (1).png" type="Texture" id=14]
[ext_resource path="res://images/botao elevador 4 principal (1).png" type="Texture" id=15]
[ext_resource path="res://images/botao elevador 0 principal (1).png" type="Texture" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=5]
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=56]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=23]
default_font = SubResource( 56 )
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=17]
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = SubResource( 16 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=29]
Button/styles/focus = SubResource( 25 )
Button/styles/hover = SubResource( 26 )
Button/styles/normal = SubResource( 27 )
Button/styles/pressed = SubResource( 28 )

[node name="painel_elevador" type="Popup"]
script = ExtResource( 4 )

[node name="PainelPreto" type="Sprite" parent="."]
position = Vector2( 582, 198 )
scale = Vector2( 1.31444, 1.32001 )
texture = ExtResource( 1 )

[node name="Button1" type="TextureButton" parent="PainelPreto"]
margin_left = -144.548
margin_top = 56.0602
margin_right = 4.45215
margin_bottom = 183.06
theme = SubResource( 5 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
expand = true

[node name="Button2" type="TextureButton" parent="PainelPreto"]
margin_left = -4.56467
margin_top = 56.0602
margin_right = 147.435
margin_bottom = 183.06
theme = SubResource( 23 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true

[node name="Button3" type="TextureButton" parent="PainelPreto"]
margin_left = -144.548
margin_top = -71.2116
margin_right = 1.45212
margin_bottom = 54.7884
theme = SubResource( 17 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Button4" type="TextureButton" parent="PainelPreto"]
margin_left = -4.56467
margin_top = -71.2115
margin_right = 143.435
margin_bottom = 57.7885
rect_pivot_offset = Vector2( -924, -108 )
theme = SubResource( 29 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Button0" type="TextureButton" parent="PainelPreto"]
margin_left = -77.5994
margin_top = 171.211
margin_right = 74.4006
margin_bottom = 298.211
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true

[node name="elevadorsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="PainelPreto/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="PainelPreto/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PainelPreto/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="PainelPreto/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="PainelPreto/Button0" to="." method="_on_Button0_pressed"]
